[Java After Eight] Update to Java 15